<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/clJobDetailsBottomPanel"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clJobDetailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_default"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tvJobDetailsPriceByAreaTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:text="@string/job_details_price_by_area"
                android:textColor="@color/mischka"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvJobDetailsPriceByAreaValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_default"
                android:text="80-95 Baht"
                android:textColor="@color/mediumSeaGreen"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/tvJobDetailsPriceByAreaTitle"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvJobDetailsDateTime"
                style="@style/AppTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/job_details_date_time"
                app:layout_constraintStart_toStartOf="@id/tvJobDetailsPriceByAreaTitle"
                app:layout_constraintTop_toBottomOf="@id/tvJobDetailsPriceByAreaTitle" />

            <include
                android:id="@+id/lJobDetailsDateTime"
                layout="@layout/layout_job_details_date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_small"
                app:layout_constraintTop_toBottomOf="@id/tvJobDetailsDateTime" />

            <TextView
                android:id="@+id/tvJobDetailPlotInfo"
                style="@style/AppTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/job_details_plot_information"
                app:layout_constraintStart_toStartOf="@id/tvJobDetailsPriceByAreaTitle"
                app:layout_constraintTop_toBottomOf="@id/lJobDetailsDateTime" />

            <include
                android:id="@+id/lJobDetailsPlotInfo"
                layout="@layout/layout_job_details_plot_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_small"
                app:layout_constraintTop_toBottomOf="@id/tvJobDetailPlotInfo" />

            <TextView
                android:id="@+id/tvJobDetailMessageToPilotTitle"
                style="@style/AppTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/job_details_message_to_pilot_title"
                app:layout_constraintStart_toStartOf="@id/tvJobDetailsPriceByAreaTitle"
                app:layout_constraintTop_toBottomOf="@id/lJobDetailsPlotInfo" />

            <TextView
                android:id="@+id/tvJobDetailMessageToPilotDescription"
                style="@style/AppInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/job_details_message_to_pilot_title"
                app:layout_constraintStart_toStartOf="@id/tvJobDetailsPriceByAreaTitle"
                app:layout_constraintTop_toBottomOf="@id/tvJobDetailMessageToPilotTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clJobDetailsBottomPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_panel"
        android:elevation="4dp"
        android:padding="@dimen/margin_default"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvJobDetailsBottomPanelTitle"
            style="@style/AppTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_details_bottom_panel_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvJobDetailsBottomPanelPriceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/job_details_price_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvJobDetailsBottomPanelTitle" />

        <TextView
            android:id="@+id/tvJobDetailsBottomPanelPriceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/mediumSeaGreen"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/tvJobDetailsBottomPanelPriceLabel"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="80-95 Baht" />

        <Button
            style="@style/AppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_medium"
            android:text="@string/action_accept"
            app:layout_constraintTop_toBottomOf="@id/tvJobDetailsBottomPanelPriceLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pbJobDetailsLoading"
        android:theme="@style/AppProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
