<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:elevation="4dp"
    app:cardCornerRadius="40dp"
    app:layout_constraintTop_toBottomOf="@id/tvJobDetailsDateTime">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_medium">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gJobDetailsPlotInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            style="@style/AppLabel"
            android:id="@+id/tvJobDetailsPlotInfoDistanceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_details_plot_info_distance_label"
            app:layout_constraintEnd_toStartOf="@id/gJobDetailsPlotInfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvJobDetailsPlotInfoDistanceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="33 km"
            android:textColor="@color/mediumSeaGreen"
            android:textSize="@dimen/text_default"
            app:layout_constraintEnd_toStartOf="@id/gJobDetailsPlotInfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvJobDetailsPlotInfoDistanceLabel" />

        <TextView
            style="@style/AppLabel"
            android:id="@+id/tvJobDetailsPlotInfoSizeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_details_plot_info_area_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/gJobDetailsPlotInfo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvJobDetailsPlotInfoSizeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            tools:text="70 m2"
            android:textColor="@color/mediumSeaGreen"
            android:textSize="@dimen/text_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/gJobDetailsPlotInfo"
            app:layout_constraintTop_toBottomOf="@id/tvJobDetailsPlotInfoSizeLabel" />

        <TextView
            style="@style/AppLabel"
            android:id="@+id/tvJobDetailsPlotInfoAddressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/job_details_plot_info_address_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvJobDetailsPlotInfoDistanceValue" />

        <TextView
            style="@style/AppInfo"
            android:id="@+id/tvJobDetailsPlotInfoAddressValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            tools:text="123 NimbleHQ village, Bangkok, 10110"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvJobDetailsPlotInfoAddressLabel" />

        <TextView
            style="@style/AppLabel"
            android:id="@+id/tvJobDetailsPlotInfoCropTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/job_details_plot_info_crop_type_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvJobDetailsPlotInfoAddressValue" />

        <TextView
            style="@style/AppInfo"
            android:id="@+id/tvJobDetailsPlotInfoCropTypeValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            tools:text="Corn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvJobDetailsPlotInfoCropTypeLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
